# wagtailstreamforms

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  Dockerfile-tox  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  circle.yml  docker-compose-tox.yml  docker-compose.yml  docker-entrypoint.sh  gulpfile.js  package.json  postcss.config.js  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: nightly-tests.yml  python-release.yml  python-test.yml
docs/: Makefile  README.md  additional.rst  advanced.rst  changelog.rst  conf.py  contributors.rst  fields.rst  forms.rst  hooks.rst  housekeeping.rst  index.rst  installation.rst  permissions.rst  readthedocs.yml  recaptcha.rst  requirements.txt  screenshots.rst  settings.rst  submission.rst  templates.rst  usage.rst
example/: models.py  settings.py  urls.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py  wsgi.py
example/migrations/: 0001_initial.py  0002_advancedformsetting.py  0002_auto_20171012_1107.py  0003_alter_basicpage_body.py  0003_auto_20190110_1017.py  0003_exampleform_exampleformsubmission.py  0004_auto_20171019_1946.py  0005_auto_20171103_2205.py  0006_auto_20180130_1109.py  0007_auto_20180130_1120.py  0008_auto_20180315_2127.py
example/scss/: _variables.scss  karma.scss
tests/: settings.py  test_case.py  test_urls.py  test_utils.py  urls.py
tests/blocks/: test_form_block.py  test_form_chooser_block.py  test_info_block.py
tests/fields/: test_base_field.py  test_fields.py  test_hook_select_field.py  test_multi_email_field.py  test_registering.py  test_streamfield.py
tests/fixtures/: test.json
tests/forms/: test_form_builder.py
tests/hooks/: test_process_form.py  test_registering.py  test_save_form_submission_data.py
tests/management/: test_prunesubmissions.py
tests/migrations/: 0001_initial.py  0002_alter_hookselectmodel_id_and_more.py
tests/models/: __init__.py  test_base_form.py  test_basic_form.py  test_email_form.py  test_email_partial.py  test_form.py  test_form_field.py  test_form_settings.py  test_form_submission.py  test_form_submission_file.py  test_migrations.py  test_mixins.py  test_regex_field_validator.py
tests/serializers/: test_form_submission.py
tests/templatetags/: test_form.py  test_url_replace.py
tests/utils/: test_get_valid_subclasses.py
tests/views/: test_admin_list.py  test_advanced.py  test_copy.py  test_delete.py  test_list.py  test_submission_list.py  test_submit.py
wagtail_streamforms/: blocks.py  conf.py  forms.py  urls.py  wagtail_hooks.py
wagtail_streamforms/migrations/: 0001_initial.py
wagtail_streamforms/models/: __init__.py  form.py  mixins.py  submission.py  validators.py
wagtail_streamforms/templatetags/: streamforms_tags.py
wagtail_streamforms/views/: __init__.py  delete.py  list.py  submit.py
wagtailstreamforms/: __init__.py  blocks.py  conf.py  fields.py  forms.py  hooks.py  serializers.py  streamfield.py  urls.py  utils.py  versioning.py  wagtail_hooks.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py  widgets.py
wagtailstreamforms/blocks/: __init__.py  form.py  struct_block.py
wagtailstreamforms/fields/: __init__.py  base.py  fields.py
wagtailstreamforms/migrations/: 0001_initial.py  0002_auto_20190103_0952.py  0002_baseform_post_redirect_page.py  0002_form_process_form_submission_hooks.py  (+17 more)
(+58 files in other folders)
